-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: client-libs
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206831 | 12 | Sergey Bylokhov | P3 | Resolved | Fixed | team |
| JDK-8206608 | 11.0.1 | Sergey Bylokhov | P3 | Resolved | Fixed | b01 |
These tests fail repeatably on Ubuntu 16.04 LTS
java/awt/Modal/FileDialog/FileDialogNonModal2Test.java
java/awt/Modal/FileDialog/FileDialogNonModal6Test.java
java/awt/Modal/FileDialog/FileDialogNonModal7Test.java
Test 6 + 7 will fail even if they are the only test that is run.
Test2 passes "standalone" but will fail if run after Test1 (not listed here).
Test2:
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown sequence number while processing queue
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:274: poll_for_event: Assertion `!xcb_xlib_threads_sequence_lost' failed.
----------rerun:(23/1981)*----------
Test 6:
----------System.out:(0/0)----------
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown request in queue while dequeuing
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:179: dequeue_pending_request: Assertion `!xcb_xlib_unknown_req_in_deq' failed.
----------rerun:(23/1981)*----------
Test7:
----------System.out:(0/0)----------
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown request in queue while dequeuing
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:179: dequeue_pending_request: Assertion `!xcb_xlib_unknown_req_in_deq' failed.
=====
These are more than test issues and need to be investigated.
java/awt/Modal/FileDialog/FileDialogNonModal2Test.java
java/awt/Modal/FileDialog/FileDialogNonModal6Test.java
java/awt/Modal/FileDialog/FileDialogNonModal7Test.java
Test 6 + 7 will fail even if they are the only test that is run.
Test2 passes "standalone" but will fail if run after Test1 (not listed here).
Test2:
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown sequence number while processing queue
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:274: poll_for_event: Assertion `!xcb_xlib_threads_sequence_lost' failed.
----------rerun:(23/1981)*----------
Test 6:
----------System.out:(0/0)----------
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown request in queue while dequeuing
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:179: dequeue_pending_request: Assertion `!xcb_xlib_unknown_req_in_deq' failed.
----------rerun:(23/1981)*----------
Test7:
----------System.out:(0/0)----------
----------System.err:(5/351)----------
Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged.
[xcb] Unknown request in queue while dequeuing
[xcb] Most likely this is a multi-threaded client and XInitThreads has not been called
[xcb] Aborting, sorry about that.
java: ../../src/xcb_io.c:179: dequeue_pending_request: Assertion `!xcb_xlib_unknown_req_in_deq' failed.
=====
These are more than test issues and need to be investigated.
- backported by
-
JDK-8206608 Several FileDialog Modality Tests fail on Linux due to X errors
-
- Resolved
-
-
JDK-8206831 Several FileDialog Modality Tests fail on Linux due to X errors
-
- Resolved
-
- links to