8203003: Several FileDialog Modality Tests fail on Linux due to X errors

Reviewed-by: prr, psadhukhan